<?xml version="1.0" encoding="utf-8"?>
<!--
     Designed and developed by 2024 mshdabiola (lawal abiola)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="feature_main_title">Saved</string>
    <string name="feature_main_loading">Loading saved…</string>
    <string name="feature_main_removed">Bookmark removed</string>
    <string name="feature_main_undo">UNDO</string>
    <string name="feature_main_screen_title_home">Home</string>

    <string name="feature_main_delete_forever">Delete forever</string>
    <string name="feature_main_archive">Archive</string>
    <string name="feature_main_unarchive">Unarchive</string>
    <string name="feature_main_delete">Delete</string>
    <string name="feature_main_make_a_copy">Make a copy</string>
    <string name="feature_main_send">Send</string>
    <string name="feature_main_rename_label">Rename label</string>
    <string name="feature_main_delete_label">Delete label</string>
    <string name="feature_main_empty_trash">Empty trash</string>
    <string name="feature_main_search_note">Search your note</string>
    <string name="feature_main_pin">Pin</string>
    <string name="feature_main_other">Other</string>
    <string name="feature_main_rename">Rename</string>
    <string name="feature_main_cancel">Cancel</string>
    <string name="feature_main_rename_label_detail">" We'll delete the label and remove it from all of your keep notes. Your notes won't be deleted"</string>
    <string name="feature_main_dialog_delete_forever">Delete Forever</string>

    <string name="feature_main_dialog_empty_trash_content">
        All note in Trash will be permanently deleted.
    </string>
    <string name="feature_main_dialog_delete_forever_content">
        This note will be permanently deleted.
    </string>
    <string name="feature_main_close">Close</string>
    <string name="feature_main_dialog_empty_trash">Empty Trash?</string>
    <string name="feature_main_more">More</string>
    <string name="feature_main_less">Less</string>
    <string name="feature_main_no_result">No search result</string>
    <string name="feature_main_types">Types</string>
    <string name="feature_main_labels">Labels</string>
    <string name="feature_main_colors">Colors</string>

    <!-- Strings for LabelAppBar -->
    <string name="label_app_bar_menu_content_description">Menu</string>
    <string name="label_app_bar_search_content_description">Search</string>
    <string name="label_app_bar_more_options_content_description">More options</string>
    <!-- End of Strings for LabelAppBar -->

    <!-- Added strings from various components -->
    <string name="label_box_default_title">Label</string>
    <string name="label_box_reset_icon_cd">Reset color</string>

    <string name="reminder_app_bar_menu_cd">Menu</string>
    <string name="reminder_app_bar_title">Reminder</string>
    <string name="reminder_app_bar_search_cd">Search</string>
    <string name="reminder_app_bar_grid_cd">Grid view</string>
    <string name="reminder_app_bar_column_cd">List view</string>

    <string name="rename_label_dialog_default_input_label">Label</string>

    <string name="search_bar_animation_cd">Search animation</string>

    <string name="search_input_field_placeholder">Search Synapse</string>
    <string name="search_input_field_back_cd">Back</string>
    <string name="search_input_field_menu_cd">Menu</string>
    <string name="search_input_field_grid_cd">Grid view</string>
    <string name="search_input_field_column_cd">List view</string>
    <string name="search_input_field_clear_cd">Clear search</string>

    <string name="search_label_default_name">Label</string>
    <string name="search_label_icon_cd">%s icon</string> <!-- For dynamic content description, e.g., "Reminder icon" -->

    <string name="select_app_bar_clear_note_cd">Clear selection</string>
    <string name="select_app_bar_pin_note_cd">Pin note</string>
    <string name="select_app_bar_notification_cd">Add notification</string>
    <string name="select_app_bar_color_cd">Change color</string>
    <string name="select_app_bar_label_cd">Change labels</string>
    <string name="select_app_bar_more_cd">More options</string>

    <string name="select_trash_app_bar_clear_note_cd">Clear selection</string>
    <string name="select_trash_app_bar_restore_note_cd">Restore note</string>
    <string name="select_trash_app_bar_more_cd">More options</string>

    <string name="trash_app_bar_menu_cd">Menu</string>
    <string name="trash_app_bar_title">Trash</string>
    <string name="trash_app_bar_more_cd">More options</string>
    <!-- End of added strings -->


    <string-array name="feature_main_search_sort">
        <item>Reminders</item>
        <item>Lists</item>
        <item>Images</item>
        <item>Voice</item>
        <item>Drawings</item>
        <item>URLs</item>
        <item>Labels</item>
    </string-array>

    <string-array name="empty_state_titles">
        <item>No notes yet</item> <!-- NOTE -->
        <item>Archive is empty</item> <!-- ARCHIVE -->
        <item>Trash is empty</item> <!-- TRASH -->
        <item>No notes in this label</item> <!-- LABEL -->
        <item>No upcoming reminders</item> <!-- REMINDER -->
    </string-array>

    <string-array name="empty_state_contents">
        <item>Create a new note to get started.</item> <!-- NOTE -->
        <item>Notes you archive will appear here.</item> <!-- ARCHIVE -->
        <item>Notes you delete will appear here for a while before being permanently deleted.</item> <!-- TRASH -->
        <item>Add notes to this label to see them here.</item> <!-- LABEL -->
        <item>Notes with reminders will show up here.</item> <!-- REMINDER -->
    </string-array>

    <string name="archive_app_bar_menu_content_description">Menu</string>
    <string name="archive_app_bar_title">Archive</string>
    <string name="archive_app_bar_search_content_description">Search</string>
    <string name="archive_app_bar_grid_content_description">Grid view</string>
    <string name="archive_app_bar_column_content_description">List view</string>
</resources>
