/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object SelectAppBarTestTags {
    const val ROOT_APP_BAR = "selectappbar:root"
    const val CLEAR_SELECTION_BUTTON = "selectappbar:clear_selection_button"
    const val TITLE_TEXT = "selectappbar:title_text"
    const val PIN_BUTTON = "selectappbar:pin_button"
    const val NOTIFICATION_BUTTON = "selectappbar:notification_button"
    const val COLOR_BUTTON = "selectappbar:color_button"
    const val LABEL_BUTTON = "selectappbar:label_button"
    const val MORE_OPTIONS_BUTTON = "selectappbar:more_options_button"
    const val GENERAL_OPTIONS_DROPDOWN = "selectappbar:general_options_dropdown"
    const val ARCHIVE_UNARCHIVE_MENU_ITEM = "selectappbar:archive_unarchive_menu_item"
    const val DELETE_MENU_ITEM = "selectappbar:delete_menu_item"
    const val MAKE_COPY_MENU_ITEM = "selectappbar:make_copy_menu_item"
    const val SEND_MENU_ITEM = "selectappbar:send_menu_item"
}
